Added Reports no Response recorded page

--- a/src/scss/reports.scss
+++ b/src/scss/reports.scss
@@ -246,3 +246,20 @@
     }
 
 }
+
+.NRR {
+    margin-top: 45px;
+    text-align: center;
+    background: #fff;
+    .NRR-container {
+        padding: 50px;
+        .NRR-headline {
+            margin-bottom: 38px;
+
+            p {
+                margin: 0;
+                margin-bottom: 6px;
+            }
+        }
+    }
+}
