--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -282,9 +282,10 @@ body {
                 color: #626F7D;
 
             }
-            a:focus{
+            a:focus, a:hover{
                 color: #0F4C81;
             }
+
         }
     }
     button{
@@ -392,6 +393,10 @@ body {
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    flex-direction: column;
+                    img{
+                        margin-bottom: 20px;
+                    }
                 }
                 .preview{
                     display: flex;
@@ -412,10 +417,10 @@ body {
                     }
                     
                     .tab-list-active {
-                        background-color: #0F4C81;
                         border-width: 1px 1px 0 1px;
-                        color: white;
                         border-radius: 9px 9px 0 0;
+                        border: 1px solid #d2dae2;
+                        border-bottom: 1px solid white;
                     }
                 }
                 .wpsf-header-tab-content{
@@ -425,11 +430,18 @@ body {
                     overflow: auto;
                     padding: 0 20px;
                     height: calc(100vh - 186px);
+                    .cardBox{
+                        margin-bottom: 20px;
+                    }
                     .no-preview-available{
                         display:flex;
                         justify-content: center;
                         align-items: center;
                         height: 100%;
+                        flex-direction: column;
+                        img{
+                            margin-bottom: 20px;
+                        }
                     }
                     .preview{
                         display: flex;
@@ -492,7 +504,7 @@ body {
                         border-radius: 9px;
                         border: 1px solid #d2dae2;
                         margin-top: 10px;
-                        padding-left: 20px;
+                        padding: 0 20px 0 20px;
                     }
                     input:focus{
                         outline: none;
@@ -555,6 +567,10 @@ body {
                     }
                 }
                 .wpsf-form-elements_content{
+                    margin-top: 20px;
+                    h3{
+                        margin: 0;
+                    }
                     .wpsf-form-elements_container{
                         display: flex;
                         flex-wrap: wrap;
@@ -931,6 +947,10 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
+            img{
+                margin-bottom: 20px;
+            }
         }
 
     }
