--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -1,4 +1,3 @@
-
 body {
     --answer-highlight-box-color: #E2EDFF;
 }
@@ -62,16 +61,47 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+
     min-height: 450px;
+    padding: 40px;
+    .tab-container{
+        .tab{
+            h3{
+                max-width: 100%;
+                word-break: break-word;
+            }
+            p{
+                max-width: 100%;
+                word-break: break-word;
+            }
+            button{
+                max-width:300px;
+                word-break: break-word;
+            }
+        }
+    }
 
 }
 .wpsf-tab-SingleChoice, .wpsf-tab-MultiChoice{
     padding: 40px;
+
     max-width: 80%;
     .tab-container{
         .tab{
+            h3{
+                margin-bottom: 20px;
+                max-width: 100%;
+                word-break: break-word;
+            }
             p{
-                word-wrap:break-word;
+                margin:0 0 20px 0;
+                max-width: 100%;
+                word-break: break-word;
+
+            }
+            button{
+                max-width: 300px;
+                word-break: break-word;
             }
             .wpsf-tab-answer-container{
                 border: 1px solid #0F4C81;
@@ -97,6 +127,9 @@ body {
                         align-items: center;
                         justify-content: center;
                     }
+                    p{
+                        padding: 20px 30px 0 10px;
+                    }
                 }
 
                 input{
@@ -104,6 +137,9 @@ body {
                 }
                 input:checked + label{
                     background-color: var(--answer-highlight-box-color);
+                }
+                input:checked + label div{
+                    background-color: white;
                 }
                 input:hover + label{
                     background-color: var(--answer-highlight-box-color);
@@ -118,30 +154,57 @@ body {
 }
 .wpsf-tab-FormElements{
     padding: 40px;
-    max-width: 80%;
-    label{
-        display: block;
-    }
-    textarea{
-        
-    border: 1px solid rgba(181, 220, 255, 0.58);
-    width: 100%;
-    height: 80px;
-    border-radius: 9px;
-    margin: 10px 0;
 
+    max-width: 80%;
+    
+    .tab-container{
+        .tab{
+            h3{
+                margin-bottom: 20px;
+                max-width: 100%;
+                word-break: break-word;
+            }
+            p{
+                margin:0 0 20px 0;
+                max-width: 100%;
+                word-break: break-word;
+            }
+            label{
+                display: block;
+                max-width: 100%;
+                word-break: break-word;
+            }
+            textarea{
+                
+            border: 1px solid rgba(181, 220, 255, 0.58);
+            width: 100%;
+            height: 80px;
+            border-radius: 9px;
+            margin: 10px 0;
+            word-break: break-word;
+            outline:none;
+            }
+            input{
+                border: 1px solid rgba(181, 220, 255, 0.58);
+                width: 100%;
+                height: 40px;
+                border-radius: 9px;
+                margin: 10px 0;
+                word-break: break-word;
+                outline:none;
+            }
+            .wpsf-form-submit-button{
+                display: flex;
+                justify-content: center;
+                button{
+                    max-width: 300px;
+                    word-break: break-word;
+                }
+            }
+
+        }
     }
-    input{
-        border: 1px solid rgba(181, 220, 255, 0.58);
-        width: 100%;
-        height: 40px;
-        border-radius: 9px;
-        margin: 10px 0;
-    }
-    .wpsf-form-submit-button{
-        display: flex;
-        justify-content: center;
-    }
+
 }
 
 .wpsf-design-preview-container{
@@ -192,6 +255,10 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
+            img{
+                margin-bottom: 20px;
+            }
         }
 
     }
