--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -403,6 +403,7 @@ body {
                     justify-content: center;
                     align-items: center;
                     width: 100%;
+                    height: 100%;
                 }
             }
             .wpsf-header-tabs{
@@ -448,6 +449,7 @@ body {
                         justify-content: center;
                         align-items: center;
                         width: 100%;
+                        height: 100%;
                     }
                     .wpsf-dropboard{
                         margin-left: 20px;
@@ -916,7 +918,8 @@ body {
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    width: 100%;
+                    width: calc( 100% - 30px );
+                    max-width: 900px;
                 }
             }
         }
