--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     --answer-highlight-box-color: #E2EDFF;
 }
@@ -264,4 +269,7 @@ body {
 
     }
 
+}
+.fullpage, .popup {
+    height: 100vh !important;
 }
