--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -219,11 +219,10 @@ body {
         display: flex;
         justify-content: center;
         overflow: auto;
-        height: calc(100vh - 108px);
         .wpsf-design-preview-container{
             width: 100%;
             .preview{
-                height: 100%;
+                height: calc( 100% - 108px );
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -237,27 +236,37 @@ body {
             }
         }
         .tab-controls{
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            margin-top: 20px;
-            button, a {
-                background-color: #F0F2F5;
-                border: 1px solid #d2dae2;
-                color: #60554F;
-                padding: 8px 15px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                cursor: pointer;
-                border-radius: 9px;
+            .tab-controls-inner {
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+                margin-right: 75px;
+                height: 100%;
+                .control-buttons {
+                    margin-left: 20px;
+                    margin-right: 20px;
+                    button {
+                        padding: 0px 25px !important;
+                    }
+                }
+                button, a {
+                    background-color: #F0F2F5;
+                    border: 1px solid #d2dae2;
+                    color: #60554F;
+                    text-align: center;
+                    text-decoration: none;
+                    display: inline-block;
+                    font-size: 16px;
+                    cursor: pointer;
+                    border-radius: 9px;
+                    padding: 0px 32px;
+                }
+                button:disabled{
+                    opacity: 0.7;
+                    background-color: #FFFFFF;
+                }
             }
-            button:disabled{
-                opacity: 0.7;
-                background-color: #FFFFFF;
-            }
+            
         }
         .no-preview-available{
             display: flex;
@@ -277,8 +286,24 @@ body {
 }
 
 .tab-controls {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    padding: 57px 0px;
+    padding: 25px 0px;
+    background: hsla(0,0%,100%,.25);
+    height: 108px;
+    div {
+        height: 100%;
+    }
+    a {
+        display: flex !important;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid#E1E8F0;
+        height: 100%;
+    }
+    img {
+        width: 140px;
+    }
+    button {
+        height: 100%;  
+        border: 1px solid#E1E8F0;
+    }
 }
