changes in company branding

--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -264,6 +264,7 @@ body {
                 button:disabled{
                     opacity: 0.7;
                     background-color: #FFFFFF;
+                    cursor: not-allowed;
                 }
             }
             
