Added Dismissal button on fullpage survey

--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -28,6 +28,16 @@ body {
     width: calc( 100% - 30px );
     max-width: 900px;
 }
+.dismissalContainer {
+    button {
+        padding: 12px 28px;
+        margin-bottom: 1rem;
+        font-size: 16px;
+        cursor: pointer;
+        border-radius: 9px;
+        border: none;
+    }
+}
 .tab-list{
     border-radius: 12px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
@@ -212,6 +222,13 @@ body {
         }
     }
 
+}
+
+.dismissalContainer {
+    width: calc( 100% - 30px );
+    max-width: 900px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .wpsf-design-preview-container{
