--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -36,6 +36,7 @@ body {
         cursor: pointer;
         border-radius: 9px;
         border: none;
+        color: #0F4C81;
     }
 }
 .tab-list{
