Added tooltip for dashboard icons

--- a/admin/css/wp-survey-funnel-admin.css
+++ b/admin/css/wp-survey-funnel-admin.css
@@ -246,7 +246,7 @@
 	display: block;
 }
 
-.wpsf-post-icons > .icon {
+.wpsf-post-icons > .wpsf-tooltip {
 	margin-left: 9.7px; 
 }
 
@@ -595,4 +595,30 @@
 .wpsf-container-main .wpsf-header .wpsf-logo {
     width: 100%;
     position: relative;
+}
+
+.wpsf-tooltip {
+	position: relative;
+}
+
+ /* Tooltip text */
+ .wpsf-tooltip .wpsf-tooltiptext {
+	visibility: hidden;
+	background-color: black;
+	color: #fff;
+	text-align: center;
+	padding: 8px 15px;
+	border-radius: 6px;
+   
+	/* Position the tooltip text */
+	position: absolute;
+	z-index: 1001;
+	top: -40px;
+	left: 0;
+	transform: translateX(-50%);
+}
+
+  /* Show the tooltip text when you mouse over the tooltip container */
+.wpsf-tooltip:hover .wpsf-tooltiptext {
+	visibility: visible;
 }
