--- a/admin/css/wp-survey-funnel-admin.css
+++ b/admin/css/wp-survey-funnel-admin.css
@@ -615,7 +615,7 @@
 	z-index: 1001;
 	top: -40px;
 	left: 0;
-	transform: translateX(-50%);
+	transform: translateX(calc(-50% + 7px));
 }
 
   /* Show the tooltip text when you mouse over the tooltip container */
