--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -908,3 +908,10 @@ body {
 	align-items: center;
 	justify-content: center;
 }
+
+.main-tab-container {
+	.tab-list {
+		max-height: calc(100vh - 300px);
+		overflow: auto;
+	}
+}
