--- a/public/css/surveyfunnel-lite-public.css
+++ b/public/css/surveyfunnel-lite-public.css
@@ -18,4 +18,15 @@
     left: 0;
     right: 0;
     z-index: 9999;
+	background: rgba(39,43,47,.9);
+}
+
+.wpsf-iframe {
+	max-width: 100% !important;
+	max-height: 100% !important;
+	width: 100% !important;
+}
+
+.d-none {
+	display: none;
 }
