Added next button if validated on single and multi

--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -24,6 +24,10 @@ body {
     max-width: 900px;
 }
 
+.checkbox-group, .radio-group {
+	margin-bottom: 20px;
+}
+
 .dismissalContainer {
     button {
         padding: 12px 28px;
