--- a/src/scss/reports.scss
+++ b/src/scss/reports.scss
@@ -242,6 +242,14 @@
                             margin-right: 20px;
                             height: calc(100vh - 290px);
                             overflow: auto;
+							position: relative;
+							.wpsf-no-response {
+								margin: 0;
+								position: absolute;
+								top: 50%;
+								left: 50%;
+								transform: translate(-50%, -50%);
+							}
                             .currentReportQuestion{
                                 word-break: break-word;
                                 h2{
