--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -293,6 +293,10 @@ body {
                 align-items: center;
                 justify-content: flex-end;
                 height: 100%;
+				@media screen and (max-width: 375px) {
+					width: 100%;
+					justify-content: center;
+				}
                 .control-buttons {
                     margin-left: 20px;
                     margin-right: 20px;
@@ -318,6 +322,9 @@ body {
 					border-radius: 5px;
 					background-color: #fff;
 					cursor: pointer;
+					@media screen and (max-width: 375px) {
+						font-size: 10px;
+					}
                 }
                 button:disabled{
                     opacity: 0.7;
