--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -303,6 +303,9 @@ body {
 					width: 100%;
 					justify-content: center;
 				}
+				span {
+					margin-right: 10px;
+				}
                 .control-buttons {
                     margin-left: 20px;
                     margin-right: 20px;
