--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -498,6 +498,44 @@ body {
                 overflow: auto;
                 padding: 0 40px 20px 40px;
                 height: calc(100vh - 180px);
+				.modalComponentPrivacyPolicy {
+					label {
+						cursor: pointer;
+						width: 50px;
+						height: 20px;
+						background: grey;
+						display: block;
+						border-radius: 100px;
+						position: relative;
+					}
+					
+					label:after {
+						content: '';
+						position: absolute;
+						top: 5px;
+						left: 5px;
+						width: 10px;
+						height: 10px;
+						background: #fff;
+						border-radius: 90px;
+						transition: 0.3s;
+					}
+					input{
+						display: none;
+					}
+					input:checked + label {
+						background: #4CAF50;
+					}
+					
+					input:checked + label:after {
+						left: calc(100% - 5px);
+						transform: translateX(-100%);
+					}
+					
+					label:active:after {
+						width: 50px;
+					}
+				}
                 .modalComponentTitle, .modalComponentDescription, .modalComponentButton, .modalComponentAnswers, .modalComponentButtonLabel{
                     margin-top: 20px;
                     h3{
