--- a/src/scss/share.scss
+++ b/src/scss/share.scss
@@ -54,6 +54,12 @@
             .shareShortcodeSettings{
                 overflow: auto;
                 height: calc(100vh - 108px);
+
+				.contentCustomAttributes {
+					display: flex;
+					
+				}
+
                 .contentShortcodeLabel-container{
                     margin-bottom: 20px;
                     border-bottom: 1px solid #d2dae2;
@@ -127,7 +133,7 @@
                     }
 
                 }
-                .contentHelpText{
+                .contentHelpText, .contentCustomAttributes{
                     width: 548px;
                     padding: 20px;
                     border: 1px solid #B5C8C8;
