--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -47,9 +47,6 @@ body {
             h3{
                 margin: 0;
             }
-            p{
-                margin: 27px 0;
-            }
             input{
                 word-wrap: break-word
             }
@@ -383,6 +380,45 @@ body {
         height: 100%;  
         border: 1px solid#E1E8F0;
     }
+}
+
+.tab {
+	p {
+		margin: 0;
+	}
+	.surveyTitle {
+		margin-bottom: 12px !important;
+	}
+	.surveyDescription {
+		margin-bottom: 30px;
+	}
+	.privacyPolicy {
+		margin: 30px 0px;
+
+		p {
+			display: inline-block;
+			input[type='checkbox'] {
+				width: 20px;
+				height: 20px;
+				vertical-align: sub;
+			}
+
+		}
+	}
+
+	.tab-validation-error {
+		margin: 30px 0px;
+
+		padding: 15px 20px;
+		color: #C16200;
+		border: 0.5px solid #F57C00;
+		background-color: #FFF4E6;
+		border-radius: 5px;
+
+		p {
+			margin: 0;
+		}
+	}
 }
 
 .wpsf-sc-fullpage {
