filter and action changes

--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -54,7 +54,7 @@ body {
                 background-color: #0F4C81;
                 border: none;
                 color: white;
-                padding: 12px 28px;
+                padding: 20px 40px;
                 text-align: center;
                 text-decoration: none;
                 display: inline-block;
@@ -69,7 +69,6 @@ body {
 			.tab-validation-error {
 				p {
 					margin: 0;
-					margin-bottom: 6px;
 				}
 			}
         }
@@ -287,6 +286,7 @@ body {
 				}
                 .tab-list{
                     overflow: auto;
+					opacity: 0.9;
                 }
             }
         }
@@ -387,33 +387,73 @@ body {
 		margin: 0;
 	}
 	.surveyTitle {
+		font-size: 36px;
+		font-weight: bold;
 		margin-bottom: 12px !important;
 	}
 	.surveyDescription {
+		font-size: 18px;
+		font-weight: 400;
 		margin-bottom: 30px;
 	}
 	.privacyPolicy {
-		margin: 30px 0px;
+		font-size: 16px;
+		font-weight: 400;
+		margin: 40px 0px;
 
 		p {
-			display: inline-block;
-			input[type='checkbox'] {
-				width: 20px;
-				height: 20px;
-				vertical-align: sub;
+			input[type="checkbox"] {
+				display: none;
+			}
+			input[type="checkbox"] + label {
+				color: #333;
+				font-family: Arial, sans-serif;
+				font-size: 14px;
+			}
+			input[type="checkbox"] + label span {
+				display: inline-block;
+				width: 25px;
+				height: 25px;
+				margin: -1px 4px 0 0;
+				vertical-align: middle;
+				cursor: pointer;
+				border: 1px solid #0F4C81;
+				box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
+				background-repeat: no-repeat;
+				background-position: center;
+				text-align: center;
+				line-height: 25px;
+			}
+			input[type="checkbox"] + label span img {
+				opacity: 0;
+				transition: all 0.3s ease;
+				width:50%;
+			}
+			input[type="checkbox"] + label span {
+				border-radius:4px;
+			}
+			input[type="checkbox"]:checked + label span img {
+				opacity: 1;
+			}
+			input[type="checkbox"]:checked + label span{
+				background-color:#0F4C81;
 			}
 
 		}
 	}
 
-	.tab-validation-error {
-		margin: 30px 0px;
+	button {
+		font-size: 20px !important;
+	}
 
-		padding: 15px 20px;
+	.tab-validation-error {
+		margin: 40px 0px;
+
+		padding: 23px 33px;
 		color: #C16200;
 		border: 0.5px solid #F57C00;
 		background-color: #FFF4E6;
-		border-radius: 5px;
+		border-radius: 12px;
 
 		p {
 			margin: 0;
